Change theme name
Preventing update notification on a WP Theme

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Ascent
+Theme Name: Ascent - Aviation Sustainability Center
 Theme URI: https://web.wsu.edu/
 Author: WSU University Communications
-Author URI: http://web.wsu.edu, http://ucomm.wsu.edu
+Author URI: http://web.wsu.edu
 Description: A child theme of the WSU Web Communications Spine template, used for Sandboxing.
 Template: spine
 Version: 0.0.1
