--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -285,11 +285,11 @@ html body {
 		margin-top:75px;
 	}
 }
-.post-type-archive-wsuwp_uc_entity {
+.post-type-archive-wsuwp_uc_entity, .single-wsuwp_uc_person {
 	main {
 		header {
 			h1 {
-				margin-left:70px;
+				margin-left:50px;
 			}
 		}
 		h2 {
