--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -285,7 +285,7 @@ html body {
 		margin-top:75px;
 	}
 }
-.post-type-archive-wsuwp_uc_entity, .single-wsuwp_uc_person {
+.post-type-archive {
 	main {
 		header {
 			h1 {
