--- a/scss/asc.css
+++ b/scss/asc.css
@@ -38,26 +38,32 @@ html body #spine #side-search-area input#s {
   background-position: 8px 8px;
   background-size: 12%;
   letter-spacing: 1px;
+  color: #eeeeec;
 }
-/* line 71, asc.scss */
+/* line 72, asc.scss */
 html body #spine #side-search-area input#s:hover, html body #spine #side-search-area input#s:focus {
   border: 1px solid #0094ca;
 }
-/* line 78, asc.scss */
+/* line 79, asc.scss */
 html body #spine:not(.cropped) .spine-navigation {
   padding-bottom: 0px;
 }
-/* line 82, asc.scss */
+/* line 83, asc.scss */
 html body #spine .spine-sitenav {
   margin-left: 0;
   margin-right: 0;
   padding-top: 8px;
 }
-/* line 86, asc.scss */
+/* line 87, asc.scss */
 html body #spine .spine-sitenav ul li {
   border-style: none;
 }
 /* line 89, asc.scss */
+html body #spine .spine-sitenav ul li ul {
+  margin: 8px 0 8px 0;
+  background-color: #343232;
+}
+/* line 95, asc.scss */
 html body #spine .spine-sitenav a {
   font-size: 1.2em;
   letter-spacing: 1px;
@@ -66,7 +72,7 @@ html body #spine .spine-sitenav a {
   color: white;
   border-left: #4e4c4b solid 8px;
 }
-/* line 96, asc.scss */
+/* line 102, asc.scss */
 html body #spine .spine-sitenav a:hover {
   border-left: #747270 solid 8px;
   color: white;
@@ -74,38 +80,38 @@ html body #spine .spine-sitenav a:hover {
   font-weight: 300;
   cursor: pointer;
 }
-/* line 104, asc.scss */
+/* line 110, asc.scss */
 html body #spine .spine-sitenav li.dogeared > a {
   color: white;
   background-color: #747270;
   border-left: #0094ca solid 8px;
   font-weight: 300;
 }
-/* line 110, asc.scss */
+/* line 116, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a {
   background-image: none;
   padding-left: 1em;
 }
-/* line 113, asc.scss */
+/* line 119, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a:before, html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a:hover {
   background-image: none;
   background-color: #747270;
 }
-/* line 118, asc.scss */
+/* line 124, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a {
   background-image: none;
 }
-/* line 120, asc.scss */
+/* line 126, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a:before, html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a:hover {
   background-image: none;
   background-color: #747270;
 }
-/* line 126, asc.scss */
+/* line 132, asc.scss */
 html body #spine #side-latest-news {
   /* Remove hidden if we decide to use */
   display: none;
 }
-/* line 129, asc.scss */
+/* line 135, asc.scss */
 html body #spine #side-latest-news h4 {
   color: white;
   text-transform: uppercase;
@@ -119,7 +125,7 @@ html body #spine #side-latest-news h4 {
   border-top: 1px solid #747270;
   padding-top: 30px;
 }
-/* line 142, asc.scss */
+/* line 148, asc.scss */
 html body #spine #side-latest-news .side-latest-news-box {
   height: 100%;
   width: 178px;
@@ -131,12 +137,12 @@ html body #spine #side-latest-news .side-latest-news-box {
   color: white;
   clear: both;
 }
-/* line 153, asc.scss */
+/* line 159, asc.scss */
 html body #spine #side-latest-news h5 {
   font-size: 1.2em;
   padding-bottom: 1em;
 }
-/* line 157, asc.scss */
+/* line 163, asc.scss */
 html body #spine #side-latest-news .rmore {
   display: block;
   width: 80px;
@@ -149,28 +155,28 @@ html body #spine #side-latest-news .rmore {
   text-align: center;
   background-color: #0094ca;
 }
-/* line 167, asc.scss */
+/* line 173, asc.scss */
 html body #spine #side-latest-news .rmore a {
   display: block;
   height: 100%;
   width: 100%;
   color: white;
 }
-/* line 170, asc.scss */
+/* line 176, asc.scss */
 html body #spine #side-latest-news .rmore:hover, html body #spine #side-latest-news .rmore:focus {
   padding: 4px;
   background-color: #4e4c4b;
   cursor: pointer;
   border: 1px solid #0094ca;
 }
-/* line 177, asc.scss */
+/* line 183, asc.scss */
 html body #spine .spine-footer {
   color: white;
   font-size: 1.3em;
   line-height: 1.1em;
   width: 178px;
 }
-/* line 183, asc.scss */
+/* line 189, asc.scss */
 html body #spine .spine-global-links {
   margin-top: 22px;
   padding-top: 22px;
@@ -178,16 +184,16 @@ html body #spine .spine-global-links {
   clear: both;
   border-color: #747270;
 }
-/* line 192, asc.scss */
+/* line 198, asc.scss */
 html body main a {
   color: #0094ca;
   text-decoration: underline;
 }
-/* line 195, asc.scss */
+/* line 201, asc.scss */
 html body main a:hover {
   color: #747270;
 }
-/* line 199, asc.scss */
+/* line 205, asc.scss */
 html body main h1 {
   color: #0094ca;
   font-weight: 700;
@@ -195,33 +201,33 @@ html body main h1 {
   line-height: 1.1em;
   padding-bottom: 1em;
 }
-/* line 203, asc.scss */
+/* line 209, asc.scss */
 html body main h2 {
   color: #0094ca;
   font-weight: 700;
   font-size: 2.2em;
   line-height: 1.1em;
 }
-/* line 206, asc.scss */
+/* line 212, asc.scss */
 html body main h3 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.8em;
   line-height: 1.1em;
 }
-/* line 209, asc.scss */
+/* line 215, asc.scss */
 html body main h4 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.2em;
   line-height: 1.1em;
 }
-/* line 212, asc.scss */
+/* line 218, asc.scss */
 html body main p, html body main ul, html body main ol {
   font-size: 1.4em;
   line-height: 1.6em;
 }
-/* line 217, asc.scss */
+/* line 223, asc.scss */
 html body main figure.featured-image {
   width: 50%;
   height: 100%;
@@ -234,38 +240,38 @@ html body main figure.featured-image {
   margin-left: -270px;
   margin-right: 30px;
 }
-/* line 228, asc.scss */
+/* line 234, asc.scss */
 html body main figure.featured-image img {
   position: fixed;
   height: 100%;
 }
-/* line 233, asc.scss */
+/* line 239, asc.scss */
 html body main .page {
   width: 50%;
   margin-right: 150px;
   margin-top: 65px;
   float: right;
 }
-/* line 237, asc.scss */
+/* line 243, asc.scss */
 html body main .post, html body main .wsuwp_uc_project, html body main .wsuwp_uc_publication, html body main .wsuwp_uc_person, html body main .wsuwp_uc_entity, html body main #tribe-events-pg-template {
   margin-left: 70px;
 }
-/* line 241, asc.scss */
+/* line 247, asc.scss */
 html body main .post .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_project .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_publication .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_person .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_entity .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main #tribe-events-pg-template .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"] {
   background-color: #0094ca;
 }
-/* line 247, asc.scss */
+/* line 253, asc.scss */
 html body main .post #tribe-bar-form, html body main .wsuwp_uc_project #tribe-bar-form, html body main .wsuwp_uc_publication #tribe-bar-form, html body main .wsuwp_uc_person #tribe-bar-form, html body main .wsuwp_uc_entity #tribe-bar-form, html body main #tribe-events-pg-template #tribe-bar-form {
   background: white;
   color: #343232;
 }
-/* line 250, asc.scss */
+/* line 256, asc.scss */
 html body main .post #tribe-bar-form input[type=email], html body main .post #tribe-bar-form input[type=password], html body main .post #tribe-bar-form input[type=text], html body main .post #tribe-bar-form select, html body main .post #tribe-bar-form textarea, html body main .wsuwp_uc_project #tribe-bar-form input[type=email], html body main .wsuwp_uc_project #tribe-bar-form input[type=password], html body main .wsuwp_uc_project #tribe-bar-form input[type=text], html body main .wsuwp_uc_project #tribe-bar-form select, html body main .wsuwp_uc_project #tribe-bar-form textarea, html body main .wsuwp_uc_publication #tribe-bar-form input[type=email], html body main .wsuwp_uc_publication #tribe-bar-form input[type=password], html body main .wsuwp_uc_publication #tribe-bar-form input[type=text], html body main .wsuwp_uc_publication #tribe-bar-form select, html body main .wsuwp_uc_publication #tribe-bar-form textarea, html body main .wsuwp_uc_person #tribe-bar-form input[type=email], html body main .wsuwp_uc_person #tribe-bar-form input[type=password], html body main .wsuwp_uc_person #tribe-bar-form input[type=text], html body main .wsuwp_uc_person #tribe-bar-form select, html body main .wsuwp_uc_person #tribe-bar-form textarea, html body main .wsuwp_uc_entity #tribe-bar-form input[type=email], html body main .wsuwp_uc_entity #tribe-bar-form input[type=password], html body main .wsuwp_uc_entity #tribe-bar-form input[type=text], html body main .wsuwp_uc_entity #tribe-bar-form select, html body main .wsuwp_uc_entity #tribe-bar-form textarea, html body main #tribe-events-pg-template #tribe-bar-form input[type=email], html body main #tribe-events-pg-template #tribe-bar-form input[type=password], html body main #tribe-events-pg-template #tribe-bar-form input[type=text], html body main #tribe-events-pg-template #tribe-bar-form select, html body main #tribe-events-pg-template #tribe-bar-form textarea {
   color: #343232;
   font-family: "Roboto", sans-serif;
   font-size: 1.2em;
 }
-/* line 256, asc.scss */
+/* line 262, asc.scss */
 html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit], html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
 input[type=submit], html body main .wsuwp_uc_publication #tribe-bar-form .tribe-bar-submit
@@ -278,7 +284,7 @@ input[type=submit] {
   font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
 }
-/* line 260, asc.scss */
+/* line 266, asc.scss */
 html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit]:hover, html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit]:focus, html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
@@ -297,31 +303,31 @@ input[type=submit]:focus {
   border: 1px solid #0094ca;
   padding: 9px;
 }
-/* line 268, asc.scss */
+/* line 274, asc.scss */
 html body main footer.main-footer {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 277, asc.scss */
+/* line 283, asc.scss */
 .datepicker.dropdown-menu {
   color: #343232;
   font-family: "Roboto", sans-serif !important;
 }
 
-/* line 283, asc.scss */
+/* line 289, asc.scss */
 .blog main {
   margin-left: 200px;
   margin-top: 75px;
 }
 
-/* line 290, asc.scss */
-.post-type-archive main h1, .single-wsuwp_uc_person main h1 {
+/* line 296, asc.scss */
+.post-type-archive main h1, .single-wsuwp_uc_person main h1, .tax-wsuwp_uc_topics main h1 {
   margin-left: 50px;
 }
-/* line 294, asc.scss */
-.post-type-archive main h2.article-title, .single-wsuwp_uc_person main h2.article-title {
+/* line 300, asc.scss */
+.post-type-archive main h2.article-title, .single-wsuwp_uc_person main h2.article-title, .tax-wsuwp_uc_topics main h2.article-title {
   font-size: 1.2em;
   font-weight: 300;
   padding-top: 8px;
@@ -330,26 +336,26 @@ html body main footer.main-footer {
 }
 
 @media screen and (max-device-width: 791px) {
-  /* line 313, asc.scss */
+  /* line 319, asc.scss */
   html body #binder #spine header {
     background-color: #0094ca;
   }
-  /* line 316, asc.scss */
+  /* line 322, asc.scss */
   html body #binder #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/mobile-logo.png);
     background-repeat: no-repeat;
     background-size: 18% !important;
     background-position: center 12px !important;
   }
-  /* line 322, asc.scss */
+  /* line 328, asc.scss */
   html body #binder #spine #side-search-area {
     margin-top: 22px;
   }
-  /* line 325, asc.scss */
+  /* line 331, asc.scss */
   html body #binder #spine #side-latest-news {
     display: none;
   }
-  /* line 329, asc.scss */
+  /* line 335, asc.scss */
   html body #binder .shelved button#shelve, html body #binder .unshelved button#shelve {
     background: url(/wp-content/uploads/sites/192/2015/01/menu.png);
     background-repeat: no-repeat;
@@ -357,7 +363,7 @@ html body main footer.main-footer {
     background-color: #4e4c4b;
     display: block;
   }
-  /* line 337, asc.scss */
+  /* line 343, asc.scss */
   html body figure.featured-image {
     position: relative !important;
     display: block;
@@ -366,24 +372,24 @@ html body main footer.main-footer {
     float: none;
     margin-left: 0px !important;
   }
-  /* line 345, asc.scss */
+  /* line 351, asc.scss */
   html body .page {
     float: none;
     width: 100% !important;
     margin: 0 !important;
   }
-  /* line 350, asc.scss */
+  /* line 356, asc.scss */
   html body .post, html body .wsuwp_uc_project, html body .wsuwp_uc_publication, html body .wsuwp_uc_person, html body .wsuwp_uc_entity, html body #tribe-events-pg-template {
     margin-left: 0 !important;
   }
 
-  /* line 356, asc.scss */
+  /* line 362, asc.scss */
   .post-type-archive main h1, .single-wsuwp_uc_person main h1 {
     margin-left: 0px;
   }
 }
 @media screen and (min-width: 2100px) {
-  /* line 364, asc.scss */
+  /* line 370, asc.scss */
   html body #binder.fluid.max-1980 {
     max-width: 3000px;
   }
